[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Blender Renders/player_head_small.png" type="Texture" id=1]
[ext_resource path="res://Resources/Shaders/outline_shader.tres" type="Material" id=2]
[ext_resource path="res://Scenes/UI/HPHUD.gd" type="Script" id=3]
[ext_resource path="res://Assets/white_circle.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/PlayerHUD.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/ItemSlot.tscn" type="PackedScene" id=6]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
width = 100
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 487.4
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 7 )
color = Color( 1, 0.219608, 0.392157, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0235294, 0, 0.0627451, 1 )
skew = Vector2( 0.3, 0 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HPHUD:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 984 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Items:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1552, 984 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "slide_in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("HPHUD:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 64, 1112 ), Vector2( 64, 984 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Items:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1568, 1119 ), Vector2( 1568, 984 ) ]
}

[node name="PlayerHUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )

[node name="HPHUD" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -96.0
margin_right = 384.0
margin_bottom = -32.0024
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="BloodPart" type="Particles2D" parent="HPHUD"]
show_behind_parent = true
position = Vector2( 32, 36 )
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 0.45
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="BlackBar" type="Panel" parent="HPHUD"]
margin_left = 32.0
margin_top = 16.0
margin_right = 192.0
margin_bottom = 64.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_editor_description_": "	"
}

[node name="HealthBars" type="HBoxContainer" parent="HPHUD"]
margin_left = 32.0
margin_top = 20.0
margin_right = 82.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="IconSpacing" type="ReferenceRect" parent="HPHUD/HealthBars"]
margin_right = 50.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 0 )

[node name="PlayerHeadIcon" type="TextureRect" parent="HPHUD"]
material = ExtResource( 2 )
margin_left = -29.0
margin_top = -16.0
margin_right = 94.0
margin_bottom = 82.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Items" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -368.0
margin_top = -96.0
margin_right = -64.0
margin_bottom = -32.0
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true
}

[node name="SpeedItem" parent="Items" instance=ExtResource( 6 )]

[node name="JumpItem" parent="Items" instance=ExtResource( 6 )]
margin_left = 80.0
margin_right = 144.0
ability = 1

[node name="ShieldItem" parent="Items" instance=ExtResource( 6 )]
margin_left = 160.0
margin_right = 224.0
ability = 2

[node name="SlomoItem" parent="Items" instance=ExtResource( 6 )]
margin_left = 240.0
margin_right = 304.0
ability = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/slide_in = SubResource( 6 )

[node name="OpaqueDur" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="OpaqueDur" to="." method="_on_OpaqueDur_timeout"]
